--- a/index.html
+++ b/index.html
@@ -421,7 +421,9 @@
               <div class="text mt-3 float-right d-block">
 
                 <h3 class="heading"><a href="https://github.com/ShivShakti7445/Travel-Planning-APP">Trip Planning App</a></h3>
-                <p>Analyzed music store data using advanced SQL queires to identify gaps and increase the business growth.</p>
+                <p>>This application will offer users features such as Google authentication for sign-in and sign-up processes. 
+					Additionally, users can create comprehensive trip itineraries by adding all necessary items. Should they overlook any essential items,
+					 they can seamlessly share their checklist with friends, enabling collaborative additions to ensure nothing is overlooked. </p>
               </div>
             </div>
           </div>
@@ -435,7 +437,8 @@
               <div class="text mt-3 float-right d-block">
 
                 <h3 class="heading"><a href="https://github.com/ShivShakti7445/ToDo-App">ToDo-App</a></h3>
-                <p>Performed exploratory data analysis on diwali sales data using Python to improve the customer experience.</p>
+                <p> This application enables users to independently create their personalized checklists.
+					 Users can create, edit, delete, and restore items within the checklist as needed. Furthermore, they can mark all completed tasks and unmark them if necessary.</p>
               </div>
             </div>
           </div>
@@ -450,7 +453,8 @@
               <div class="text mt-3 float-right d-block">
 
                 <h3 class="heading"><a href="https://github.com/ShivShakti7445/tic_tac_toe">Tic Tac Toe App</a></h3>
-                <p>Designed a power bi dashboard for Madhav Store to track and analyze the online sales data acorss India.</p>
+                <p> This application facilitates users to engage in a game of Tic Tac Toe with their friends, enhancing their entertainment experience.
+					 Additionally, the application announces the winner of each game, after which players have the option to restart the game for another round of play at their discretion.</p>
               </div>
             </div>
           </div>
