--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 			            <h2>A Mobile Developer and Software Engineer</h2>
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
-			            <p><a href="https://drive.google.com/file/d/15PYDxVz31HhzH3EziHHS18kb8EVNdaan/view?usp=drive_link" 
+			            <p><a href="https://drive.google.com/file/d/1ToSRoh1izB6uDEh5PVVe8FN2ISKMKfRZ/view?usp=sharing" 
 							class="btn btn-primary py-3 px-4">My Resume</a>   <!-- link of your resume -->
 							<a href="https://github.com/ShivShakti7445" class="btn btn-white btn-outline-white py-3 px-4"
 							>My works</a></p>  <!-- link of your githube -->
@@ -574,7 +574,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="https://drive.google.com/file/d/15PYDxVz31HhzH3EziHHS18kb8EVNdaan/view?usp=drive_link">resumelink</a></p>
+	            <p><a href="https://drive.google.com/file/d/1ToSRoh1izB6uDEh5PVVe8FN2ISKMKfRZ/view?usp=sharing">resumelink</a></p>
 	          </div>
           </div>
 
