--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
 						<br>
 						<br>
-			            <h2>A Web/Mobile Developer and Software Engineer</h2>
+			            <h2>A Web Developer and Software Engineer</h2>
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
 			            <p><a href="https://drive.google.com/file/d/1suaW-QR2En5UvXJ5k9CvR7T9b_b8OGMm/view?usp=sharing" 
@@ -209,7 +209,7 @@
 									<div class="col-sm-6 col-md-7">
 									  <div class="about-info">
 										<p><span class="title-s">Name: </span> <span>Shiv Shakti</span></p>
-										<p><span class="title-s">Job Role: </span> <span>SDE and Mobile/Web Developer </span></p>
+										<p><span class="title-s">Job Role: </span> <span>SDE and Web Developer </span></p>
 										<p><span class="title-s">Experience: </span> <span>0-1 Years </span></p>
 										<p><span class="title-s">Address: </span> <span>Varanasi, India</span></p>
 									  </div>
@@ -218,7 +218,7 @@
 
 								<div class="skill-mf">
 									<p class="title-s">Skills</p>
-									<span>Flutter /React/ CSS/ Next.js</span> <span class="pull-right">95%</span>
+									<span>React/Node.js/ CSS/ Next.js</span> <span class="pull-right">95%</span>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="95" aria-valuemin="0"
 											aria-valuemax="100"></div>
@@ -259,15 +259,15 @@
 								<h1 class="big">About</h1>
 								<h2 class="mb-4">About Me</h2>
 								
-								<p>With 0-1 years of comprehensive experience in the field of Mobile/Web Development, accompanied by a B.Tech degree in CSE .
+								<p>With 0-1 years of comprehensive experience in the field of Web Development, accompanied by a B.Tech degree in CSE .
 									Proficient in mobile development, hypothesis testing, customer behaviour analysis, . 
 									Demonstrated success in leading impactful projects and providing effective mentorship.</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
-									<li class="d-flex"><span>Role:</span> <span> Mobile Development &amp SDE ;</span></li>
+									<li class="d-flex"><span>Role:</span> <span> WebDevelopment &amp SDE ;</span></li>
 									<li class="d-flex"><span>Domain:</span> <span>Computer Science and Engineering</span></li>
 									<li class="d-flex"><span>Education:</span> <span>Bachelor of Technology</span></li>
-									<li class="d-flex"><span>Language:</span> <span> Java,SQL,React,Next.js,CSS,HTML</span></li>
-									<li class="d-flex"><span>Tools:</span> <span>GitHub, Git, VS Code, Android Studio,Figma, Power BI, Microsoft Excel</span></li>
+									<li class="d-flex"><span>Language:</span> <span> Java,SQL,React,Node,Next.js,CSS,HTML</span></li>
+									<li class="d-flex"><span>Tools:</span> <span>GitHub, Git, VS Code,Figma, Power BI, Microsoft Excel,Power Point, MS Word</span></li>
 									<li class="d-flex"><span>Other Skills:</span> <span>Leadership, Event Management, Writing, Public Speaking, Time Management</span></li>
 									<li class="d-flex"><span>Interest:</span> <span>Traveling, Travel Photography,Writing Poetry, </span></li>
 									
